--- a/style/header.css
+++ b/style/header.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 10px;
     font-family: var(--font-ubuntu);
-    gap: 32px;
+    gap: 20px;
     margin-top : 10px;
     margin-bottom : 20px;
 }
@@ -15,7 +15,7 @@
 .title {
     font-family: var(--font-ubuntu);
     letter-spacing: 3px;
-    font-size : 16px;
+    font-size : 18px;
     
 }
 /* sub title styling*/
@@ -37,13 +37,16 @@
 /* responsive for screen 428px */
 @media (min-width: 428px)   {        
     .profile-pic img {
-        max-width: 300px;
+        max-width: 360px;
     }
     .title{
-        font-size : 24px;
+        font-size : 33px;
+    }
+    .header{
+        gap : 24px;
     }
     .sub-title{
-        font-size : 14px;
+        font-size : 20px;
     }
 }
 
@@ -53,9 +56,12 @@
         max-width: 400px;
     }
     .title{
-        font-size : 36px;
+        font-size : 38px;
+    }
+    .header{
+        gap : 32px;
     }
     .sub-title{
-        font-size : 24px;
+        font-size : 26px;
     }
 }
