--- a/style/style.css
+++ b/style/style.css
@@ -10,8 +10,8 @@
 
 /* universal selector in css */
 * {
-    margin: 0;
-    padding: 0;
+    margin: 3px;
+    padding: 2px;
     box-sizing: border-box;
 }
 /* body styling*/
